# umrd

./: .dockerignore  .gitignore  AGENTS.md  CODING_STANDARDS.md  Containerfile  Dockerfile  LICENSE  README.md  RELEASE.md  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.sisyphus/: agent.md  umrd-documentation.md
examples/: allowlist.example  blocklist.example  umrd.env.example
k8s/: daemonset.yaml
scripts/: build-image.sh  build.sh  deploy-k8s.sh  test.sh  update-version.sh
service/: umrd.service
src/umrd/: __init__.py  __main__.py  _version.py  cgroup.py  cgtree.py  cli.py  py.typed  umrd.py  util.py
tests/: test_umrd.py
umrd-old/: cgtree.py  cli.py  umrd.py  util.py
