[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "umrd"
version = "1.0.0"
description = "Userspace Memory Reclaimer Daemon"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "w7panel", email = "w7panel@example.com"}
]
keywords = ["memory", "cgroup", "reclaim", "container", "kubernetes"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Systems Administration",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
]

[project.scripts]
umrd = "umrd.cli:main"

[project.urls]
Homepage = "https://github.com/w7panel/umrd"
Documentation = "https://github.com/w7panel/umrd#readme"
Repository = "https://github.com/w7panel/umrd"

[project.urls]
Homepage = "https://github.com/w7panel/umrd"
Documentation = "https://github.com/w7panel/umrd#readme"
Repository = "https://github.com/w7panel/umrd"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}
package-data = {umrd = ["py.typed"]}

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
